force-app/main/default/objects/SessaoEstudo__c/SessaoEstudo__c.object-meta.xml
<CustomObject>
    <label>Sessão de Estudo</label>
    <nameField>
        <label>Nome da Sessão</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessões de Estudo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>