force-app/main/default/objects/SessaoEstudo__c/fields/Certificacao__c.field-meta.xml
<CustomField>
    <fullName>Certificacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificação</label>
    <referenceTo>Certificacao__c</referenceTo>
    <relationshipLabel>Sessões de Estudo</relationshipLabel>
    <relationshipName>SessoesEstudo</relationshipName>
    <type>Lookup</type>
</CustomField>