force-app/main/default/objects/SessaoEstudo__c/fields/DuracaoMinutos__c.field-meta.xml
<CustomField>
    <fullName>DuracaoMinutos__c</fullName>
    <label>Duração (Minutos)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>