force-app/main/default/objects/SessaoEstudo__c/fields/FinalizadaEm__c.field-meta.xml
<CustomField>
    <fullName>FinalizadaEm__c</fullName>
    <label>Finalizada em</label>
    <type>DateTime</type>
</CustomField>