force-app/main/default/objects/SessaoEstudo__c/fields/IniciadaEm__c.field-meta.xml
<CustomField>
    <fullName>IniciadaEm__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Iniciada em</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>