force-app/main/default/objects/SessaoEstudo__c/fields/QuantidadeAcertos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeAcertos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade de Acertos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>