force-app/main/default/objects/SessaoEstudo__c/fields/QuantidadeQuestoes__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeQuestoes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade de Questões</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>