force-app/main/default/objects/SessaoEstudo__c/fields/TipoSessao__c.field-meta.xml
<CustomField>
    <fullName>TipoSessao__c</fullName>
    <label>Tipo de Sessão</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RevisaoDiaria</fullName>
                <default>true</default>
                <label>Revisão Diária</label>
            </value>
            <value>
                <fullName>TreinoLivre</fullName>
                <label>Treino Livre</label>
            </value>
            <value>
                <fullName>Simulado</fullName>
            </value>
            <value>
                <fullName>Reforco</fullName>
                <label>Reforço</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>